test/AutoDiff/Sema/differentiable_func_type.swift
// RUN: %target-swift-frontend -enable-experimental-differentiable-programming -typecheck -verify %s

// expected-error @+1 {{@differentiable attribute only applies to function types}}
let _: @differentiable Float

let _: @differentiable (Float) -> Float
